--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: rgb(241, 0, 0);
+    background-color: rgb(22 115 253);
     -webkit-transition: .4s;
     transition: .4s;
 }
