--- a/style.css
+++ b/style.css
@@ -1,64 +1,12 @@
-/* .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+.bg-primary {
+    --bs-bg-opacity: 1;
+    background-color: rgba(13, 109, 253, 0.578) !important;
 }
 
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+.nav-link :hover{
+   color: black ;
 }
 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: rgb(22 115 253);
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked+.slider {
-    background-color: #000;
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px #000;
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
-
-Rounded sliders
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
- */
 .switch {
     font-size: 17px;
     position: relative;
@@ -177,6 +125,6 @@ Rounded sliders
 }
 
 .btn-outline:hover {
-    color:aliceblue;
+    color: aliceblue;
     background-color: rgb(22 115 253);
 }
