--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .switch {
     font-size: 17px;
     position: relative;
@@ -80,6 +79,8 @@
     animation: tilt 5s linear infinite;
 }
 
+
+
 @keyframes tilt {
 
     0% {
@@ -120,3 +121,20 @@
     color: aliceblue;
     background-color: rgb(22 115 253);
 }
+
+
+
+/* .nav a {
+    border: 1px solid; */
+    /* border-radius: 160px;
+    margin: 05px;
+}
+
+.nav li:hover {
+    background-color: rgba(255, 255, 255, 0.765);
+    border-radius: 90px;
+}
+
+.nav li.active {
+    background-color: #fff;
+} */
