--- a/style.css
+++ b/style.css
@@ -121,3 +121,20 @@
     color: aliceblue;
     background-color: rgb(22 115 253);
 }
+
+
+
+/* .nav a {
+    border: 1px solid; */
+    /* border-radius: 160px;
+    margin: 05px;
+}
+
+.nav li:hover {
+    background-color: rgba(255, 255, 255, 0.765);
+    border-radius: 90px;
+}
+
+.nav li.active {
+    background-color: #fff;
+} */
