--- a/categories/style.css
+++ b/categories/style.css
@@ -1,7 +1,156 @@
+.dropdown-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 34px;
+    margin: auto;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0);
+    transition: .4s;
+    border-radius: 30px;
+}
+
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    border-radius: 20px;
+    left: 2px;
+    bottom: 2px;
+    z-index: 2;
+    background-color: rgb(22 115 253);
+    transition: .4s;
+}
+
+.sun svg {
+    position: absolute;
+    top: 6px;
+    left: 36px;
+    z-index: 1;
+    width: 24px;
+    height: 24px;
+}
+
+.moon svg {
+    fill: #73C0FC;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 1;
+    width: 24px;
+    height: 24px;
+}
+
+/* .switch:hover */
+.sun svg {
+    animation: rotate 15s linear infinite;
+}
+
+@keyframes rotate {
+
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* .switch:hover */
+.moon svg {
+    animation: tilt 5s linear infinite;
+}
+
+
+
+@keyframes tilt {
+
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(-10deg);
+    }
+
+    75% {
+        transform: rotate(10deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
+.input:checked+.slider {
+    background-color: #000000;
+}
+
+.input:focus+.slider {
+    box-shadow: 0 0 1px #000000;
+}
+
+.input:checked+.slider:before {
+    transform: translateX(30px);
+}
+
+
+.btn-outline {
+    border: 1px solid rgb(22 115 253);
+}
+
+.btn-outline:hover {
+    color: aliceblue;
+    background-color: rgb(22 115 253);
+}
+
+
+
+/* .nav a {
+    border: 1px solid; */
+/* border-radius: 160px;
+    margin: 05px;
+}
+
+.nav li:hover {
+    background-color: rgba(255, 255, 255, 0.765);
+    border-radius: 90px;
+}
+
+.nav li.active {
+    background-color: #fff;
+} */
+
+
+
 @media (max-width:1300px) {
 
     .c {
-        width:fit-content;
+        width: fit-content;
         display: flex;
         justify-content: center;
         align-items: center;
